--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -7,3 +7,24 @@
     height: 20rem;
   }
 }
+
+.content {
+  margin: 3rem 0;
+
+  h3 {
+    margin-bottom: 2rem;
+  }
+
+  main {
+    display: block;
+    text-align: justify;
+
+    p {
+      margin: 1rem 0;
+    };
+
+    a {
+      color: var(--highlight);
+    }
+  }
+}
